HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportRawContext/Source/Main.uv
//! Rejected FFI specimen for hosted exports using raw Context.

[[host_export("C")]]
public procedure hostedRawContext(context: Context) -> i32 {
    return 0
}

